Sutter Health/src/objects/PDIEmailAddressService__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains Email Address verification information.</description>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestMethod__c</fullName>
        <label>RequestMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoapAction__c</fullName>
        <label>SoapAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeOut__c</fullName>
        <label>TimeOut</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PDI Email Address Service</label>
</CustomObject>